# AVEditor

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/av/editor/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/av/editor/: AssetUtils.java  MainActivity.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
libaveditor/: build.gradle
libaveditor/src/androidTest/java/com/av/editor/: ExampleInstrumentedTest.kt
libaveditor/src/main/cpp/: CMakeLists.txt  MLOG.h  editor_jni.cpp
libaveditor/src/main/cpp/include/ffmpeg/libavutil/: pixfmt.h
libaveditor/src/main/cpp/src/: common.h  filtering.cpp  filtering.h  merger.cpp  merger.h  recode.cpp  recode.h  remix_timestamp.cpp  remix_timestamp.h  timeline.cpp  timeline.h
libaveditor/src/main/java/com/av/editor/: AVEditor.kt
libaveditor/src/test/java/com/av/editor/: ExampleUnitTest.kt
